[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/overlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/race.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/crosshair.png" type="Texture" id=4]
[ext_resource path="res://scenes/marble.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/explosion.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gui/menu.tscn" type="PackedScene" id=7]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 5.23546, 1.26289, 0 )
shadow_enabled = true

[node name="CrosshairContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="CrosshairContainer"]
material = SubResource( 1 )
margin_left = 496.0
margin_top = 284.0
margin_right = 528.0
margin_bottom = 316.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="PlayerSpawn" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 26.2655, 0 )

[node name="Overlay" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="Menu" parent="." instance=ExtResource( 7 )]
unique_name_in_owner = true

[node name="Race" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="MarblePool" type="Spatial" parent="."]
unique_name_in_owner = true

[node name="Marble1" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble2" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble3" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble4" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble5" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble6" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble7" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble8" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble9" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble10" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble11" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble12" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble13" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Marble14" parent="MarblePool" instance=ExtResource( 5 )]
visible = false

[node name="Explosion" parent="." instance=ExtResource( 6 )]

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true
